Thu Oct 14 03:37:52 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Add mips to archtable
  * Use Errno module to get ENOENT instead of hardcoding it

Thu Oct 14 02:47:40 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Fix C error we introduced in checkpath() earlier

Wed Oct 13 20:41:16 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Update oldfile-check in process_archive so we don't experience
    memory corruption

Wed Oct 13 17:51:17 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Merge patches from Ben Collins <bcollins@debian.org>:
    + fix windowresizing in dselect
    + when upgrading check if a file is not also in the new package before
	  removing it, so we don't remove new files due to symlinks confusing us
    + fix logic error in checkforremoval: it was breaking cycles in for the
      wrong package
    + fix findbreakcycle to remove cycles even for packages we are not changing

Mon Oct 11 22:19:01 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Add the option to show a diff of the old and new conffile when
    configuring a package

Tue Oct 12 17:15:08 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * don't die if we can't open a package in dpkg-scanpackages, just print
    a warning and skip the package.

Mon Oct 11 18:18:25 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Move dselect into its own package

Mon Oct 11 17:37:47 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Added support for HURD to start-stop-daemon
  * Create new directory utils/ for extra C-programs, and move
    start-stop-daemon there.

Mon Oct 11 15:47:18 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * Preparation to move start-stop-daemon from scripts to utils
  * Merge patches from Ben Collins <bcollins@debian.org>:
    + modify remove_buld to remove conffiles when purging a package before we
      remove its directories.
    + check if we violate conflicts/depends/pre-depends of other packages when