@@ -277,6 +277,8 @@ void deferred_configure(struct pkginfo *pkg) {
 	      p= getenv(PAGERENV);
 	      if (!p || !*p) p= DEFAULTPAGER;
 	      sprintf(cmdbuf, "diff -u %.250s %.250s | %.250s", cdr.buf, cdr2.buf, p);
+              s= getenv(SHELLENV);
+              if (!s || !*s) s= DEFAULTSHELL;
 	      execlp(s,s,"-c", cmdbuf);
               ohshite(_("failed to run diff (%.250s)"), cmdbuf);
 	    }
