@@ -1,3 +1,9 @@
+Thu Oct 14 04:16:25 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
+
+  * Reinstate patch to not read available-file with doing listfiles.
+  * Don't forget to get the correct SHELL before showing a diff of
+    conffiles!
+
 Thu Oct 14 03:37:52 CEST 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Add mips to archtable
